# pythonProject3

./: pyproject.toml  requirements.txt  te.py  testt.py  treatments.txt
.streamlit/: config.toml
